Updated SpringBoot to Version 3.3 and switched to lavalink lavaplyer fork including youtube-source-manager which fixes Youtube-Playback